src/objects/Batch_Error_Logs__c.object
<CustomObject>
    <label>Batch Error Logs</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Batch Error Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_String__c</fullName>
        <label>Stack Trace String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Batch_Id__c</columns>
        <columns>Details__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>